--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   modal_bottom_sheet: ^2.0.0
   searchfield: ^0.5.6
+  flutter_xlider: ^3.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
